# RealPDEBench

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
realpdebench/: __init__.py  __main__.py  cli.py  eval.py  hf_download.py  train.py  train_surrogate.py
realpdebench/configs/combustion/: cno.yaml  deeponet.yaml  dmd.yaml  dpot_l.yaml  dpot_s.yaml  fno.yaml  galerkin_transformer.yaml  mwt.yaml  trainsolver.yaml  unet.yaml  wdno.yaml
realpdebench/configs/controlled_cylinder/: cno.yaml  deeponet.yaml  dmd.yaml  dpot_l.yaml  dpot_s.yaml  fno.yaml  galerkin_transformer.yaml  mwt.yaml  trainsolver.yaml  unet.yaml  wdno.yaml
realpdebench/configs/cylinder/: cno.yaml  deeponet.yaml  dmd.yaml  dpot_l.yaml  dpot_s.yaml  fno.yaml  galerkin_transformer.yaml  mwt.yaml  trainsolver.yaml  unet.yaml  wdno.yaml
realpdebench/configs/foil/: cno.yaml  deeponet.yaml  dmd.yaml  dpot_l.yaml  dpot_s.yaml  fno.yaml  galerkin_transformer.yaml  mwt.yaml  trainsolver.yaml  unet.yaml  wdno.yaml
realpdebench/configs/fsi/: cno.yaml  deeponet.yaml  dmd.yaml  dpot_l.yaml  dpot_s.yaml  fno.yaml  galerkin_transformer.yaml  mwt.yaml  trainsolver.yaml  unet.yaml  wdno.yaml
realpdebench/data/: __init__.py  combustion_dataset.py  combustion_hf_dataset.py  combustion_surrogate_dataset.py  combustion_surrogate_hf_dataset.py  data_normalizer.py  dataset.py  fluid_dataset.py  fluid_hf_dataset.py  numerical_real_compare.py
realpdebench/model/: __init__.py  cno.py  deeponet.py  dmd.py  dpot.py  fno.py  galerkin_transformer.py  load_model.py  model.py  unet.py  wdno.py
realpdebench/model/MWT_libs/: __init__.py  (+2 more)
realpdebench/utils/: __init__.py  convert_hdf5_to_hf.py  dpot_ckpts_dl.py  metrics.py  utils.py
(+36 files in other folders)
